infra/frontro/blazn-test/networkpolicy-api-from-edge.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-from-edge
  namespace: blazn-test
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: moments-direct
      podSelector:
        matchLabels:
          app: moments-direct-gateway
    ports:
    - port: 8081
      protocol: TCP
  podSelector:
    matchLabels:
      app: blazn-api
  policyTypes:
  - Ingress
